--- a/section2/index.html
+++ b/section2/index.html
@@ -11,7 +11,6 @@
 
         <script src="jquery-2.2.1.min.js"></script>
         <script src="../bootstrap/js/bootstrap.min.js"></script>
-        <script src="app.js"></script>
 
         <style>
             html,
@@ -42,24 +41,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <input type="button" id="btnStep1" value="Step1">
-                    <input type="button" id="btnStep2" value="Step2">
-
-                    <div id="step1" class="panel">
-                        <div class="panel-body">
-                            <h1>ステップ１</h1>
-                            <p>これはステップ １についての説明です。</p>
-                        </div>
-                    </div>
-
-                    <div id="step2" class="panel">
-                        <div class="panel-body">
-                            <h1>ステップ２</h1>
-                            <p>これはステップ ２についての説明です。</p>
-                        </div>
-                    </div>
+                    <h1 reply="">こんにちは</h1>
                 </div>
             </div>
         </div>
+
+        <script src="app.js"></script>
     </body>
 </html>
