--- a/section2/index.html
+++ b/section2/index.html
@@ -4,10 +4,10 @@
     <head>
         <meta http-equiv="X-UA-COMPATIBLE" content="IE=Edge">
         <meta charset="UTF-8">
-        <title>AnglarJS</title>
+        <title>$scopeについて | AnglarJS</title>
 
+        <!-- bootstrapを読込 -->
         <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-
 
         <style>
             html,
