Angularjs のサービスを使ってみるサンプル。

--- a/section3/index.html
+++ b/section3/index.html
@@ -18,6 +18,8 @@
 
         <!-- angularをCDNから取得 -->
         <script src="../bootstrap/js/1.5.8.angular.min.js"></script>
+        <script src="https://code.angularjs.org/1.5.8/angular-messages.min.js"></script>
+        <script src="https://code.angularjs.org/1.5.8/angular-resource.min.js"></script>
         <script src="app.js"></script>
 
     </head>
@@ -39,6 +41,19 @@
 
         <div class="container">
             <div ng-controller="mainController">
+                <form name="myForm">
+                    <label>
+                        メールアドレス:
+                        <input type="email" ng-model="field" name="myField" required minlength="5" />
+                    </label>
+
+                    <div ng-messages="myForm.myField.$error" role="alert">
+                        <div class="alert alert-danger" ng-message="required">未入力です。</div>
+                        <div class="alert alert-danger" ng-message="minlength, maxLength">
+                            メールアドレスは5〜100文字でなければなりません。
+                        </div>
+                    </div>
+                </form>
                 <h1>こんにちは</h1>
             </div>
         </div>
