--- a/section4/index.html
+++ b/section4/index.html
@@ -45,6 +45,16 @@
                     <!-- input と $scope.handle が双方向にバインドされる。 -->
                 </div>
 
+                <!-- 条件を満たさない時はDOM毎消す -->
+                <!--<div ng-if="handle.length !== 5" class="alert">-->
+                <!--    ハンドルネームは5文字でなければいけません！-->
+                <!--</div>-->
+                
+                <!-- 条件を満たさない時はDOMを非表示にする -->
+                <div ng-show="handle.length !== 5" class="alert">
+                    ハンドルネームは5文字でなければいけません！
+                </div>
+
                 <hr />
 
                 <h1>twitter.com/{{lowercaseHandle()}}</h1>
