--- a/section4/index.html
+++ b/section4/index.html
@@ -66,6 +66,11 @@
                 <hr />
 
                 <h1>twitter.com/{{lowercaseHandle()}}</h1>
+                
+                <h3>ハンドルネームのルール</h3>
+                <ul>
+                    <li ng-repeat="rule in rules">{{rule.rulename}}</li>
+                </ul>
             </div>
         </div>
     </body>
