--- a/section4_x/public/index.html
+++ b/section4_x/public/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!--  -->
 <html lang="ja" ng-app="myApp">
     <head>
         <meta http-equiv="X-UA-COMPATIBLE" content="IE=Edge">
@@ -7,7 +6,7 @@
         <title>ディレクティブ | AnglarJS</title>
 
         <!-- bootstrapを読込 -->
-        <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 
         <style>
             html,
@@ -17,7 +16,7 @@
         </style>
 
         <!-- angularをCDNから取得 -->
-        <script src="../bootstrap/js/1.5.8.angular.min.js"></script>
+        <script src="/bootstrap/js/1.5.8.angular.min.js"></script>
         <script src="app.js"></script>
 
     </head>
